another editing pass to incorporate Karen's suggestion and trim the paper to 8 pages.

--- a/icra.bib
+++ b/icra.bib
@@ -490,7 +490,6 @@ year = {2012}
   title =        "The CMA Evolution Strategy: A Tutorial",
   author =    "Hansen, Nikolaus",
   year =      "2009",
-  url = "http://www.lri.fr/~hansen/cmatutorial.pdf",
   bib2html_rescat = "Learning Methods",
 }
 
@@ -604,11 +603,7 @@ year = {2012}
  pages = {73:1--73:8},
  articleno = {73},
  numpages = {8},
- url = {http://doi.acm.org/10.1145/1778765.1778810},
- doi = {10.1145/1778765.1778810},
- acmid = {1778810},
  publisher = {ACM},
- address = {New York, NY, USA},
  keywords = {controller synthesis, human motion, optimization, physics-based animation},
 }
 
@@ -625,11 +620,7 @@ year = {2012}
  pages = {25:1--25:11},
  articleno = {25},
  numpages = {11},
- url = {http://doi.acm.org/10.1145/2185520.2185521},
- doi = {10.1145/2185520.2185521},
- acmid = {2185521},
  publisher = {ACM},
- address = {New York, NY, USA},
  keywords = {biomechanics, musculoskeletal simulation, physics-based character animation},
 }
 
@@ -1800,7 +1791,7 @@ very large scanned models."
 
 @article{HA:2015,
   author = {Sehoon Ha and Katsu Yamane},
-  journal = {IEEE International Conference on Robotics and Automation},
+  journal = {IROS},
   title = {{Reducing Hardware Experiments for Model Learning and Policy Optimization}},
   year = {2015}
 }
@@ -1826,9 +1817,6 @@ very large scanned models."
  location = {Pittsburgh, Pennsylvania, USA},
  pages = {1--8},
  numpages = {8},
- acmid = {1143845},
- publisher = {ACM},
- address = {New York, NY, USA},
 } 
 
 @article{BongardL05,
@@ -1853,7 +1841,7 @@ pages = {1113--1119},
 
 @article{Mordatch:2015,
   author = {Mordatch, Igor and Lowrey, Kendall and Todorov, Emanuel},
-  journal = {IEEE/RAS International Conference on Intelligent Robots and Systems},
+  journal = {IROS},
   title = {Ensemble-CIO: Full-Body Dynamic Motion Planning that Transfers to Physical Humanoids},
   year = {2015},
 }
@@ -1868,7 +1856,6 @@ pages = {1113--1119},
  location = {St. Paul, MN, USA},
  pages = {39--46},
  numpages = {8},
- publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
 } 
 
 @INPROCEEDINGS{arash2003simulatingfluid-solid,
@@ -2291,15 +2278,8 @@ MacIver, M.A.},
  booktitle = {Proceedings of the 28th annual conference on Computer graphics and interactive techniques},
  series = {SIGGRAPH '01},
  year = {2001},
- isbn = {1-58113-374-X},
  pages = {251--260},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/383259.383287},
- doi = {http://doi.acm.org/10.1145/383259.383287},
- acmid = {383287},
  publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {character animation, computer animation, physics-based animation control, physics-based modeling},
 }
 
 @InProceedings{Zordan:2002:MCD,
@@ -3003,11 +2983,7 @@ MacIver, M.A.},
  pages = {43:1--43:8},
  articleno = {43},
  numpages = {8},
- url = {http://doi.acm.org/10.1145/2185520.2185539},
- doi = {10.1145/2185520.2185539},
- acmid = {2185539},
  publisher = {ACM},
- address = {New York, NY, USA},
  keywords = {control, physics-based animation},
 } 
 
@@ -3124,9 +3100,7 @@ issn = "0027-8424",
                Sven Behnke},
   title     = {Compliant Robot Behavior Using Servo Actuator Models Identified by
                Iterative Learning Control},
-  booktitle = {RoboCup 2013: Robot World Cup {XVII} [papers from the 17th Annual
-               RoboCup International Symposium, Eindhoven, The Netherlands, July
-               1, 2013].},
+  booktitle = {RoboCup 2013: Robot World Cup {XVII}},
   pages     = {207--218},
   year      = {2013},
 }
@@ -3144,11 +3118,7 @@ issn = "0027-8424",
  pages = {50:1--50:12},
  articleno = {50},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/2601097.2601121},
- doi = {10.1145/2601097.2601121},
- acmid = {2601121},
  publisher = {ACM},
- address = {New York, NY, USA},
  keywords = {balance control, bicycle simulation, neural networks, reinforcement learning},
 }
 
@@ -3164,7 +3134,6 @@ issn = "0027-8424",
   author = {Hansen, Nikolaus},
   note = {https://www.lri.fr/~hansen/cmaes\_inmatlab.html},
   title = {Covariance matrix adaptation: source code},
-  url = {https://www.lri.fr/~hansen/cmaes\_inmatlab.html},
   year = 2006
 }
 
@@ -3225,14 +3194,9 @@ issn = "0027-8424",
  number = {9},
  month = sep,
  year = {2005},
- issn = {0278-3649},
  pages = {755--769},
  numpages = {15},
- url = {http://dx.doi.org/10.1177/0278364905057217},
- doi = {10.1177/0278364905057217},
- acmid = {1082840},
  publisher = {Sage Publications, Inc.},
- address = {Thousand Oaks, CA, USA},
  keywords = {biped walking, getting up motion, human-size, humanoid robot},
 }
 
@@ -3286,7 +3250,7 @@ issn = "0027-8424",
 @inproceedings{tassa:2012,
   title={Synthesis and stabilization of complex behaviors through online trajectory optimization},
   author={Tassa, Yuval and Erez, Tom and Todorov, Emanuel},
-  booktitle={Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ International Conference on},
+  booktitle={IROS},
   pages={4906--4913},
   year={2012},
   organization={IEEE}
@@ -3296,7 +3260,7 @@ issn = "0027-8424",
   title={Rising Motion Controllers for Physically Simulated Characters},
   author={Jones, Benjamin James},
   year={2011},
-  school={The University Of British Columbia (Vancouver}
+  school={The University Of British Columbia}
 }
 
 @article{ljung:2010,
