--- a/calibration.tex
+++ b/calibration.tex
@@ -7,15 +7,15 @@ Although the optimal controllers $\bar{\mathbf{q}}(t)$ can work effectively in t
 \label{eqn:calibration}
 \end{equation}
 
-Although there are dozens of simulation parameters $\boldsymbol{\theta}$ that we could calibrate, we choose to focus on the gains of the actuators and the COM of each body segment. We believe that they are the most relevant parameters to our tasks. Our tasks involve changing postures and maintaining balance. We decide to calibrate only actuator gains and COM because the actuator gains are critical to posture change and the COM is vital to balance.
+Although there are dozens of simulation parameters $\boldsymbol{\theta}$ that we could calibrate, we choose to focus on the most relevant parameters to our tasks. Our tasks involve changing postures and maintaining balance. We decide to calibrate only the gains of the actuators and the COM of each body segment because the actuator gains are critical to posture change and the COM is vital to balance.
 
 $E_{cali}$ is defined as the difference between the state trajectories in the simulation and those collected in the real robot experiments when the same controller is used in both scenarios:
 
 \begin{equation}
-  E_{cali}=\frac{1}{n}\sum_{i=1}^{n}\int_{0}^{T+1}||\tilde{\mathbf{x}}_i(t)-\mathbf{x}_i(t)||_{\mathbf{W}}^2\mathrm{d}t
+  E_{cali}=\frac{1}{n}\sum_{i=1}^{n}\int_{0}^{T+1}||\tilde{\mathbf{x}}(\bar{\mathbf{q}}_i(t))-\mathbf{x}(\bar{\mathbf{q}}_i(t);\boldsymbol{\theta})||_{\mathbf{W}}^2\mathrm{d}t
   \label{eqn:calibrationObj}
 \end{equation}
-Recall that our entire algorithm is an iterative process. At the $n$th iteration, the optimal controller $\bar{\mathbf{q}}_n(t)$ produces the state trajectory $\mathbf{x}_n(t)$ in the simulation and $\tilde{\mathbf{x}}_n(t)$ on the real robot\footnote{we use the average of the multiple trajectories as $\tilde{\mathbf{x}}_n(t)$ in the robot experiment because even with the same controller, we can get slightly different trajectories due to the varied initial conditions, the noise from the sensor, from the actuator and from the environment.}. $E_{cali}$ is measured using all $n$ optimal controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ and their associated state trajectories $\{\bar{\mathbf{x}}_i(t)\}_{i=1,...,n}$ from the current and the previous iterations. $\mathbf{W}$ is a weight matrix, which encapsulates the relative importance of each joint.
+Recall that our entire algorithm is an iterative process. At the $n$th iteration, the optimal controller $\bar{\mathbf{q}}_n(t)$ produces the state trajectory $\mathbf{x}(\bar{\mathbf{q}}_n(t);\boldsymbol{\theta})$ in the simulation and $\tilde{\mathbf{x}}(\bar{\mathbf{q}}_n(t))$ on the real robot\footnote{We use an average of three trajectories as $\tilde{\mathbf{x}}(\bar{\mathbf{q}}_i(t))$ in the robot experiments to smooth out the noise and other possible perturbations.}. Note that the simulated trajectory depends on both the controller $\bar{\mathbf{q}}_n(t)$ and the simulation parameters $\boldsymbol{\theta}$. $E_{cali}$ is measured using all $n$ optimal controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ and their associated state trajectories $\{\tilde{\mathbf{x}}(\bar{\mathbf{q}}_i(t))\}_{i=1,...,n}$ from the current and the previous iterations. $\mathbf{W}$ is a weight matrix, which encapsulates the relative importance of each joint.
 
-Due to the presence of contact changes in the locomotion task and the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibration}) is challenging using traditional continuous optimization algorithms. Similar to controller optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\boldsymbol{\theta}$. To evaluate each CMA sample, we set the parameters $\boldsymbol{\theta}$ in the physical simulator, execute the controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ to simulate the robot motions $\{\mathbf{x}_i(t)\}_{i=1,...,n}$, and then evaluate the objective function eq. (\ref{eqn:calibrationObj}).
+Due to the presence of contact changes in the locomotion task and the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibration}) is challenging using traditional continuous optimization algorithms. Similar to controller optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\boldsymbol{\theta}$. To evaluate each CMA sample, we set the parameters $\boldsymbol{\theta}$ in the physical simulator, execute the controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ to simulate the robot motions $\{\mathbf{x}(\bar{\mathbf{q}}_i(t);\boldsymbol{\theta})\}_{i=1,...,n}$, and then evaluate the objective function eq. (\ref{eqn:calibrationObj}).
 
