--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,7 @@
 \section{Discussion}
 \begin{table}
-\caption{Generalizability of the calibrated simulation}
+  \caption{Generalizability of the calibrated simulation}
+  \vspace{-0.1in}
  \label{table:generalize}
 \begin{center}
 \begin{tabular}{|c|c|c|c|}
@@ -16,20 +17,21 @@
  I\&II\&III & Succeed & Succeed & Succeed\\
 \hline
 \end{tabular}
+\vspace{-0.2in}
 \end{center}
  \end{table}
 
 
-One important component of our system is simulation calibration. The results show that our simulation calibration algorithm is effective to narrow down the Reality Gap, with a minimal number of the robot experiments. In all the experiments, at most two iteration of calibration (or approximately 12 seconds of robot data) is needed before we can transfer the controller to the real robot. This amount of robot data is far less than those needed in typical system identification methods.
+One important component of our system is simulation calibration. The results show that our simulation calibration algorithm is effective to narrow down the Reality Gap, with a minimal number of the robot experiments. In all the examples, at most two iterations of calibration (or approximately 12 seconds of robot data) is needed before we can transfer the controller to the real robot. This amount of robot data is far less than those needed in typical system identification methods.
 
 \ignorethis{\karen{The point of the paper is to design controller that works in the real world, instead of finding the ground truth about the hardware parameters. This point needs to be made more clear in the introduction.}}
-Similar to other system identification methods, the parameters optimized in simulation calibration may not be the true physical parameters. For example, we observe that the simulation parameters optimized for the task of lean-to-stand can be different from those of kneel-to-stand. In other words, the calibrated simulator is overfitted to the current task and may not be useful for a different task. Overfitting could be a problem if the goal is to estimate the true physical parameters. However, it is not a problem in our case because the goal is to find a controller for a specific task. Actually, it is preferred because tightly coupling simulation calibration with a specific control task makes it possible to use small amount of robot data.
+Similar to other system identification methods, the parameters optimized in simulation calibration may not be the true physical parameters. For example, we observe that the simulation parameters optimized for the task of lean-to-stand can be different from those of kneel-to-stand. In other words, the calibrated simulator is overfitted to the current task and may not be useful for a different task. Overfitting could be a problem if the goal is to estimate the true physical parameters. However, it is not a problem in our case because the goal is to find a controller for a specific task. Actually, it is preferred because tightly coupling simulation calibration with a specific control task makes it possible to use a small amount of robot data.
 
 \ignorethis{\karen{Regarding Task IV, we will use it as a counter example for the following statement: Multiple training tasks will improve the generalization, but they have to be similar tasks. When using dissimilar training tasks to calibrate the simulator, the results are poor.}}
 
 One related question is how we can calibrate a simulation so that it can be generalized to other tasks. To answer this question, we perform the following two experiments. In the first experiment, we calibrate the simulation for one task (e.g. lean-to-stand) and use it to optimize a controller for a different task (e.g. sit-to-stand). We then test this controller on the robot. The first three rows of Table \ref{table:generalize} summarize the generalizability of the calibrated simulation when it is calibrated with a single task. Task I is lean-to-stand. Task II is sit-to-stand and Task III is kneel-to-stand. As we expected, the calibrated simulator cannot be generalized to a different task in most cases.
 
-The second experiment is similar to the first except that we calibrate the simulation with multiple tasks (e.g. lean-to-stand and sit-to-stand). The last four rows of Table \ref{table:generalize} show that the generalizability across Task I, II and III is greatly improved if multiple tasks are used to calibrate the simulation. Multiple training tasks will improve the generalization, but they have to be similar tasks. For example, Task IV (stand-to-handstand) is drastically different from the first three tasks. In contrast to the other tasks, it needs to maintain balance up-side-down and it experiences strong perturbations from the USB cable. If we include it in this generalization experiments, the results are poor.
+The second experiment is similar to the first except that we calibrate the simulation with multiple tasks (e.g. lean-to-stand and sit-to-stand). The last four rows of Table \ref{table:generalize} show that the generalizability across Task I, II and III is greatly improved if multiple tasks are used to calibrate the simulation. Multiple training tasks will improve the generalization, but they have to be similar tasks. For example, Task IV (stand-to-handstand) is drastically different from the first three tasks: It needs to maintain balance up-side-down and it experiences strong perturbations from the USB cable. If we include it in the training tasks, the results are poor.
 
 These experiments show that if we need to design controllers for a group of similar tasks, we may not need to perform simulation calibration for each task independently. It is likely that after developing the first few controllers using our system, the calibrated simulation would be accurate enough. The remaining controllers can be optimized in this simulation and further calibration is not necessary.
 
@@ -37,4 +39,4 @@ These experiments show that if we need to design controllers for a group of simi
 
 This paper has presented a complete pipeline to automatically design locomotion controllers for robots. This solution consists of a set of powerful computational tools: physical simulation, controller optimization and simulation calibration. Our system allows us to efficiently design controllers of a humanoid robot to achieve four different tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand.
 
-There are two venues of future work. First, we will include more simulation parameters in simulation calibration. In this paper, we have shown that adjusting the COM and the actuator gains are enough for all four tasks, but other simulation parameters might also be important for other tasks. A problem of including more simulation parameters is the risk of local minimum and overfitting. Performing some automatic prioritizing and selection on candidate parameters would be a promising future research. Second, we believe that our system can be generalized to control other types of locomotion, such as walking, biking or more challenging gymnastic stunts. In these tasks, feedback control is necessary. In the future, we plan to extend our system to include feedback control and test it on a wider range of locomotion tasks.
+There are two venues of future work. First, we will include more simulation parameters in simulation calibration. In this paper, we have shown that adjusting the COM and the actuator gains are enough for our needs, but other simulation parameters might also be important for other tasks. A potential issue of including more simulation parameters is the increased risk of overfitting. Performing some automatic prioritizing and selection on candidate parameters would be a promising future research. Second, we believe that our system can be generalized to control other types of locomotion, such as walking, biking or more challenging gymnastic stunts. In these tasks, feedback control is necessary. In the future, we plan to extend our system to include feedback control and test it on a wider range of locomotion tasks.
